--- a/frontend/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend/src/app/pages/home/home-landing/home-landing.component.html
@@ -13,7 +13,7 @@
         <mat-card-title>Intendência</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Administração de recursos, logística e gestão militar.</p>
+        <p><strong>CORRÊA</strong> - Logística.<br><strong>EMA-400/401</strong>.<br><strong>MD-41-M-01/02/03</strong>.<br><strong>Lei nº 11.631/2007</strong>.<br><strong>DGMM-0130</strong>, entre outras.</p>
       </mat-card-content>
     </mat-card>
 
@@ -23,7 +23,7 @@
         <mat-card-title>Estratégia</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Fundamentos estratégicos e planejamento de operações.</p>
+        <p><strong>COUTAU-BÉGARIE</strong>, Tratado de Estratégia.<br><strong>WEDIN</strong>, Estratégias Marítimas.<br><strong>EMA-310</strong></p>
       </mat-card-content>
     </mat-card>
 
@@ -33,7 +33,7 @@
         <mat-card-title>Planejamento Militar</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Metodologias e processos de planejamento operacional.</p>
+        <p><strong>Lei Complementar nº 97</strong>.<br> <strong>Decreto nº 7.276/2010</strong> - Estrutura Militar de Defesa.<br><strong>MD30-M-01</strong></p>
       </mat-card-content>
     </mat-card>
 
@@ -43,17 +43,7 @@
         <mat-card-title>História</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>História militar e análise de conflitos históricos.</p>
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="module-card" (click)="navigateTo(['app5-ingles', 'bibliografia'])">
-      <mat-card-header>
-        <mat-icon class="module-icon">translate</mat-icon>
-        <mat-card-title>Inglês</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p>Língua inglesa aplicada ao contexto militar e profissional.</p>
+        <p><strong>BLAINEY</strong>, Breve história XX.<br><strong>VIDIGAL</strong>, Guerra no Mar.<br><strong>MAGNOLI</strong>, História das Guerras.<br><strong>ABREU</strong>, Síntese Histórica.</p>
       </mat-card-content>
     </mat-card>
 
@@ -63,7 +53,7 @@
         <mat-card-title>Geopolítica e RI</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Análise geopolítica e relações internacionais contemporâneas.</p>
+        <p><strong>KAPLAN</strong>, A Vingança da Geografia.<br><strong>MATTOS</strong>, Geopolítica e Modernidade.<br><strong>VESENTINI</strong>, Novas Geopolíticas.<br><strong>MINGST</strong>, Relações Internacionais</p>
       </mat-card-content>
     </mat-card>
 
@@ -73,7 +63,7 @@
         <mat-card-title>Política</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Teoria política e sistemas de governo.</p>
+        <p><strong>DIAS</strong>, Ciência Política.<br><strong>SANTOS</strong>, Economia Azul.<br> <strong>EMA-323</strong> - Política Naval.<br><strong>Decreto nº 12.481/2025</strong> - PMN, entre outras</p>
       </mat-card-content>
     </mat-card>
 
@@ -83,7 +73,7 @@
         <mat-card-title>Direito</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Fundamentos jurídicos e direito aplicado às Forças Armadas.</p>
+        <p><strong>BYERS</strong>, A Lei da Guerra.<br><strong>CNUDM</strong> - Convenção das Nações Unidas sobre o Direito do Mar.<br><strong>Pacto de São José.</strong><br><strong>Convenção de Viena.</strong><br><strong>Manual Sanremo</strong>, entre outras.</p>
       </mat-card-content>
     </mat-card>
 
@@ -93,7 +83,7 @@
         <mat-card-title>Economia</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>Princípios econômicos e economia de defesa.</p>
+        <p><strong>GREMAUD</strong>, Economia Brasileira Contemporânea.<br><strong>VASCONCELLOS</strong>, Economia Micro e Macro.<br><strong>SANTOS</strong>, Economia Azul</p>
       </mat-card-content>
     </mat-card>
   </div>
