--- a/frontend/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
+++ b/frontend/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
@@ -6,5 +6,8 @@
   *ngIf="showCapa"
   [capas]="capas"
   [markdownPath]="markdownPath"
-  [basePath]="basePath">
+  [basePath]="basePath"
+  [conceitosPath]="conceitosPath"
+  [flashcardsPath]="flashcardsPath"
+  [perguntasPath]="perguntasPath">  
 </app-capa-bibliografia>
